--- a/Desktop/SDEV305/portfolio/styles/style.css
+++ b/Desktop/SDEV305/portfolio/styles/style.css
@@ -53,3 +53,53 @@ a:hover {
     padding: 2rem;
     background: white;
 }
+
+.header {
+    didsplay: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.profile-photo {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 1rem;
+    float: left;
+    margin-right: 1.5rem;
+}
+
+.header-text {
+    flex: 1;
+}
+
+.contact-table a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.contact-table a:hover {
+    text-decoration: underline;
+    color: #0066cc;
+}
+
+.contact-table td {
+    padding: 0.3rem 0;
+}
+
+.contact-table {
+    width: 70%;
+}
+
+.contact-left {
+    width: 45%;
+    padding-right: 2rem;
+}
+
+.contact-right {
+    width:45%;
+    padding-left: 3rem;
+
+}
